[project]
name = "conti"
version = "1.1.0"
description = "Minimalistic FFMpeg based playout server"
keywords = ["playout", "broadcast", "streaming", "ffmpeg", "television"]
repository = "https://github.com/immstudios/conti"
authors = ["Martin Wacker <martas@imm.cz>"]
license = "MIT"
readme = "README.md"
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Multimedia :: Video :: Conversion",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.4",
]
